<resources>
    <string name="app_name">StudentRegistration</string>
    <string name="full_name">Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hobbies">Hobbies:</string>
    <string name="sports">Sports</string>
    <string name="music">Music</string>
    <string name="reading">Reading</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="gender_male">Gender: Male</string>
    <string name="hobbies_sports_music">Hobbies: Sports, Music</string>
    <string name="address_example_street">Address: Example Street</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="gender">Gender</string>
    <string name="courses">Courses :</string>
</resources>