<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        >

        <!-- Name -->
        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Gender -->
        <LinearLayout
            android:id="@+id/GenderView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@id/etName"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender:"
                android:textSize="16sp"
                android:layout_marginEnd="12dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:layout_marginStart="16dp" />
            </RadioGroup>
        </LinearLayout>


        <!-- Course Spinner -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/courses"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/GenderView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            />
        <Spinner
            android:id="@+id/spinnerCourse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/GenderView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Hobbies label -->
        <TextView
            android:id="@+id/tvHobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/spinnerCourse"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <!-- CheckBoxes -->
        <CheckBox
            android:id="@+id/cbSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            app:layout_constraintTop_toBottomOf="@id/tvHobbies"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />

        <CheckBox
            android:id="@+id/cbMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            app:layout_constraintTop_toBottomOf="@id/cbSports"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />

        <CheckBox
            android:id="@+id/cbReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading"
            app:layout_constraintTop_toBottomOf="@id/cbMusic"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />

        <!-- Address -->
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@id/cbReading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Save Button -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/etAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
